(add new changes on top of this file)

Änderungen
----------

v0.14.9 (??.??.2015)

v0.14.8 (15.01.2015)
 * Do not enable cHash system in controller for USER_INT plugins
 * fixed composer version for composer projects

v0.14.7 (07.01.2015)
* fal handling and indixing added
* indexing proces for dam files
* security fixes for dam handling
* some quote string wrapper methods
* New Method tx_rnbase_util_TSFAL::fetchFileList as tx_dam_tsfe->fetchFileList equivalent for easier dam2file migration.
* composer.json added. install rn_base with { "require" : { "digedag/rn-base" : "dev-master" } }

v0.14.6 (04.12.2014)
 * New feature, to skip empty values for keepvars
 * Postprocess hooks for doInsert, doUpdate and doDelete in the DB util.

v0.14.5 (17.11.2014)
 * Bugfix: auto translation causes error in TCE forms.
 * New method getCleaned removes xss from the parameter value.
 * New method join for Files
 * Preprocess hooks for doInsert, doUpdate and doDelete in the DB util.
 * New method loadTCA, to load the TCA, for excample in Ajax-calls or eID's.
 * Bugfix: label markers without translation will be removed from template.

v0.14.4 (06.11.2014)
 * Support for label markers with salutation suffix.
In HTML template: ###LABEL_GREETING###
in language file: 
 label_greeting_informal = Hello guys!
 label_greeting_formal = Good day, Sir!
Configure salutation in plugin config:
plugin.tx_myplugin.salutation = formal
 * Fixed some FAL issues and enhanced support.
 * New XmlElement class for better XML parsing.
 * New wrapper method tx_rnbase::makeInstanceService()
 * New wrapper method tx_rnbase_util_Strings::getRandomHexString().

v0.14.3 (07.10.2014)
 * To avoid caching an USER-Plugin, it can now easily converted to USER_INT by calling $this->getConfigurations()->convertToUserInt(). Thanks to Michael Wagner! 
 * Action can now be skipped with the Skip Exception. Thanks to Michael Wagner!
 * New subtemplate parsing. Thanks to Michael Wagner!